kubectl/prod/jenkins/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /jenkins/$2
    nginx.ingress.kubernetes.io/use-regex: "true"
  labels:
    devops.kmontocam.com: "true"
  name: jenkins
  namespace: jenkins
spec:
  ingressClassName: nginx
  rules:
    - host: devops.kmontocam.com
      http:
        paths:
          - backend:
              service:
                name: jenkins-operator-http-jenkins
                port:
                  number: 8080
            path: /jenkins(/|$)(.*)
            pathType: ImplementationSpecific
